# ssengine

./: Cargo.toml  README.md  build_and_run.bat  docs.md  todo.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: ast.rs  error.rs  evaluator.rs  functions.rs  lib.rs  model.rs  parser.rs
core/src/grammar/: excel.pest
examples/: Cargo.toml  build_and_run.bat  dcf_model.rs  minimal.rs  run_minimal.bat  simple_model.rs
io/: Cargo.toml
io/src/: csv.rs  lib.rs  xlsx.rs
sdk/: Cargo.toml
sdk/src/: api.rs  lib.rs  schemas.rs  server.rs
