[package]
name = "ssengine-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Command-line interface for the ssengine spreadsheet engine."
rust-version = { workspace = true }

[dependencies]
ssengine-core = { path = "../core" }
ssengine-io = { path = "../io" }
ssengine-sdk = { path = "../sdk" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Rich terminal output
colorize = "0.1"
# For interactive operation
rustyline = "13.0"
