[package]
name = "ssengine-cli"
version = "0.1.0"
edition = "2021"
authors = ["Cascade AI <cascade@windsurf.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/ssengine"
description = "Command-line interface for the ssengine spreadsheet engine."
rust-version = "1.70"

[dependencies]
ssengine-core = { path = "../core" }
ssengine-io = { path = "../io" }
ssengine-sdk = { path = "../sdk" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Rich terminal output
colorize = "0.1"
# For interactive operation
rustyline = "13.0"
