[package]
name = "ssengine-core"
version = "0.1.0"
edition = "2021"
authors = ["Cascade AI <cascade@windsurf.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/ssengine"
description = "Core data structures, formula parser, and evaluation engine for ssengine."
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

# Parser
pest = "2.7"
pest_derive = "2.7"

# Data structures
hashbrown = "0.14" # Efficient HashMap, as planned in todo.md for sparse cell storage
petgraph = "0.6"   # For dependency graph
chrono = { version = "0.4", features = ["serde"] } # For datetime cell values

# Optional: String interning for Cell::Text to save memory
# string_interner = "0.12"
# once_cell = "1.19" # For initializing a global interner if used
