[package]
name = "ssengine-io"
version = "0.1.0"
edition = "2021"
authors = ["Cascade AI <cascade@windsurf.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/ssengine"
description = "I/O functionality for XLSX and CSV files for ssengine."
rust-version = "1.70"

[dependencies]
ssengine-core = { path = "../core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

# XLSX writing
rust_xlsxwriter = "0.61"

# XLSX reading
calamine = "0.24"

# CSV processing
csv = "1.3"
